--- a/src/ec2/statistics-webpage/package.json
+++ b/src/ec2/statistics-webpage/package.json
@@ -12,6 +12,7 @@
     "aws-sdk": "^2.1372.0",
     "body-parser": "^1.20.2",
     "ejs": "^3.1.9",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "node-cron": "^3.0.2"
   }
 }
